<resources>
    <string name="app_name">AvaMovies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avamovies" translatable="false">AvaMovies</string>
    <string name="login_activity_email">Email</string>
    <string name="login_activity_password">Senha</string>
    <string name="login_activity_forgot_password">Forgot password?</string>
    <string name="login_activity_login">Entrar</string>
    <string name="login_activity_login_google">Login with Google</string>
    <string name="login_activity_or">ou</string>
    <string name="login_activity_new_to_here">Novo por aqui?</string>
    <string name="login_activity_register">Registre-se</string>
    <string name="login_activity_user_pw_wrong">Usuário ou senha incorretos!</string>
</resources>