<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".view.LoginActivity">

<ImageView
    android:id="@+id/login_iv_top"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:src="@drawable/ic_top_wave"
    android:scaleType="fitXY"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

<LinearLayout
    android:id="@+id/login_linear_layout_criar_conta"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/login_iv_top"
    app:layout_constraintBottom_toTopOf="@id/login_iv_bottom"
    android:orientation="vertical"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/avamovies"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginBottom="48dp"
        android:textAlignment="textStart"
        android:textColor="@color/purple_700"/>

    <EditText
        android:id="@+id/login_edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_email"
        android:layout_marginBottom="24dp"
        android:drawableStart="@drawable/login_activity_email_24"
        android:drawablePadding="16dp"
        android:drawableTint="@color/purple_200"/>

    <EditText
        android:id="@+id/login_edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_activity_password"
        android:drawableStart="@drawable/login_activity_lock_24"
        android:drawablePadding="16dp"
        android:drawableTint="@color/purple_200"
        android:inputType="textPassword"/>


    <Button
        android:id="@+id/login_button_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login_activity_login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:text="@string/login_activity_or" />

<!--    <Button-->
<!--        android:id="@+id/login_button_google"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:paddingTop="16dp"-->
<!--        android:paddingBottom="16dp"-->
<!--        android:text="@string/login_activity_login_google"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_new_to_here"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/login_text_view_criar_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_register"
            android:textColor="@color/purple_500"/>

    </LinearLayout>


</LinearLayout>

<ImageView
    android:id="@+id/login_iv_bottom"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:src="@drawable/ic_bottom_wave"
    android:scaleType="fitXY"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>